--- a/munge/01.03.Merge_Full_VRI_Data.Rmd
+++ b/munge/01.03.Merge_Full_VRI_Data.Rmd
@@ -36,6 +36,9 @@ In this script, I:
 ``` {r setup, echo=F, message=F, warning=F}
 require(knitr)
 opts_knit$set(root.dir = '..')
+knitr::opts_chunk$set(
+  fig.path = "figures/"
+)
 ```
 
 ``` {r load.project, message=F}
