--- a/munge/05.0X.FinalDataPrep.Rmd
+++ b/munge/05.0X.FinalDataPrep.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Filter for temporal alignment"
 author: "Nicole Barker"
-date: "Last run: Jan 1, 2018"
+date: "Last run: Jan 2, 2018"
 output: 
   word_document:
     reference_docx: ../styles/ReportFormat_1.docx
@@ -77,59 +77,120 @@ colnames(projs)[which(colnames(projs) == "Method")] <- "METHOD" #change colname
 projs$Maxdist <- toupper(projs$Maxdist)
 
 birddat3 <- merge(birddat2, projs[c("METHOD", "MaxDuration", "Maxdist")], by="METHOD", all.x = T)
-
+kable(head(birddat3))
 ```
+
+**NOTES**
+
+* And here is where I realized that some of the new projects don't have max dist and max duration in their tables
+* I referred back to the Access database to update the project summary table accordingly
+
+``` {r}
+meths <- read.csv("data/qry_ProjMethodSummary-manuallyCorrected.csv", header=T)
+
+birddat3.5 <- merge(birddat3[c("METHOD", "PKEY", "SS", "SITE", "STN", "YYYY", "MM", "DD", "StartTime", "SPECIES", "English_Name", "BEH", "ABUND")], meths[c("METHOD", "DURMETH", "DURATIONRANGE", "DISTMETH", "DISTANCERANGE", "MaxDuration", "Maxdist")], by="METHOD", all.x=T)
+```
+
+#### Reclass methods to the subset I would use as factors in subsequent analyses
+
+``` {r}
+distanceClass <- data.frame(Maxdist=unique(birddat3.5$Maxdist), distanceClass=c("unlimited", "80-100", "80-100", "50"))
+
+durationClass <- data.frame(MaxDuration=unique(birddat3.5$MaxDuration), durationClass=c("3", "5-6", "8-10", "8-10", "5-6"))
+
+birddat3.5 <- merge(birddat3.5, distanceClass, by="Maxdist", all.x=T)
+birddat3.5 <- merge(birddat3.5, durationClass, by="MaxDuration", all.x=T)
+rm(birddat3)
+```
+
 
 ### Aggregate to "total bird" count per survey instance
 
 ``` {r aggregate, eval=T}
-sumABUND <- aggregate(birddat3$ABUND,  by=list(PKEY=birddat3$PKEY), FUN=sum)
+sumABUND <- aggregate(birddat3.5$ABUND,  by=list(PKEY=birddat3.5$PKEY), FUN=sum)
 colnames(sumABUND)[2] <- "sumABUND"
 
-speciesCOUNT <- aggregate(birddat3$ABUND,  by=list(PKEY=birddat3$PKEY), FUN=length) 
+speciesCOUNT <- aggregate(birddat3.5$ABUND,  by=list(PKEY=birddat3.5$PKEY), FUN=length) 
 colnames(speciesCOUNT)[2] <- "speciesCOUNT"
 
 tmp <- merge(sumABUND, speciesCOUNT, by="PKEY")
 
-birddat4 <- merge(tmp, birddat3[c("PKEY", "METHOD", "YYYY", "MaxDuration", "Maxdist")], by="PKEY")
+birddat4 <- merge(tmp, birddat3.5[c("PKEY", "METHOD", "SS", "YYYY", "MaxDuration", "Maxdist", "durationClass", "distanceClass")], by="PKEY")
 
 birddat4 <- birddat4[!duplicated(birddat4),]
 ```
 
 
+### Combine with Peter's "total bird" offsets
 
-### Load Peter's "total bird" offsets
+**First, a quality check**
 
-How many of my kept PKEYs do not have total bird offsets? 
-Is it worth Peter recalculating offsets for them?
+* How many of my kept PKEYs do not have total bird offsets? 
+* Is it worth Peter recalculating offsets for them?
 
-``` {r, eval=F}
-offsets <- read.csv("data/offset-species-2016-12-13.csv", header=T)
-cache("offsets")
-```
+Ran this code previously to cache the most recent offset file I have
+`offsets <- read.csv("data/offset-species-2016-12-13.csv", header=T)`
+
+`cache("offsets")`
 
 ``` {r}
 load("cache/offsets.RData")
+
 colnames(offsets)
 head(offsets$X)
 
 offsetpkeys <-offsets$X
 bcpkeys <- unique(birddat4$PKEY)
+
+load("cache/TOTA_offsets-v3_2016-12-01.Rdata")
+tota <- OFF; rm(OFF)
+tota <- as.data.frame(tota)
+tota$PKEY <- row.names(tota)
+colnames(tota)
+totapkeys <- tota$PKEY
+
 ```
 
 ##### Which PKEYs from BC are not in Peter's offsets? 
 
-* `sum(bcpkeys %in% offsetpkeys)` `r sum(bcpkeys %in% offsetpkeys)` of `length(bcpkeys)` `r length(bcpkeys)` BC Pkeys have offsets
+* `sum(bcpkeys %in% offsetpkeys)` `r sum(bcpkeys %in% offsetpkeys)` of `r length(bcpkeys)` BC Pkeys have offsets
 * This suggests that `r length(bcpkeys) - sum(bcpkeys %in% offsetpkeys)` BC PKEYS do __not__ have offsets
 
-``` {r}
-df.offsettest <- data.frame(OFFSET="yes", PKEY=offsets$X)
-test <- merge(birddat4, df.offsettest, by="PKEY", all.x=T)
 
-nooffset <- test[is.na(test$OFFSET),]
+##### What about the total species offsets? 
+* `sum(bcpkeys %in% totapkeys)` `r sum(bcpkeys %in% totapkeys)` of `r length(bcpkeys)` BC Pkeys have offsets
+* This suggests that `r length(bcpkeys) - sum(bcpkeys %in% totapkeys)` BC PKEYS do __not__ have offsets
+
+``` {r}
+df.offsettest <- data.frame(OFFSET.indivspp="yes", PKEY=offsets$X)
+test <- merge(birddat4, df.offsettest, by="PKEY", all.x=T)
+df.totatest <- data.frame(OFFSET.tota="yes", PKEY=totapkeys)
+test <- merge(test, df.totatest, by="PKEY", all.x=T)
+
+test$BothMissing <- (test$OFFSET.indivspp == "yes") & (test$OFFSET.tota == "yes")
+
+nooffset <- test[is.na(test$BothMissing),]
+write.table(nooffset, "output/BCdat_nooffset_2018.01.02.csv", sep=",", row.names = F, col.names = T)
 
 kable(rbind(head(nooffset), tail(nooffset)),)
 
 length(unique(nooffset$PKEY))
+```
+
+
+#### Combine bird data with offsets
+
+``` {r}
+birddat5 <- merge(birddat4, tota, by="PKEY", all.x=T)
+sum(is.na(birddat5$TOTA)) # how many PKEYs don't have offsets
+```
+
+### Combine bird data with VRI data
+
+``` {r}
+dat1 <- merge(birddat5, vri_bird_tempaligned[-which(colnames(vri_bird_tempaligned) %in% c("FID_BIRD", "VRIintersectLayer", "OBJECTID", "FID_VRI", "BirdLayer", "MAP_ID", "POLYGON_ID", "OPENING_IND", "OPENING_SOURCE", "POLYGON_AREA", "INPUT_DATE", "INTERPRETATION_DATE", "REFERENCE_YEAR", "ATTRIBUTION_BASE_DATE", "PROJECTED_DATE", "OPENING_ID", "ORG_UNIT_NO", "ORG_UNIT_CODE", "polygon_area_cal", "FD_PERCENT", "PL_PERCENT", "AT_PERCENT", "VRI.layer.polygon.ID", "Difference_Bird_Photo", "ToleratedLag", "LagExceedsTolerated", "VRI.layer.polygon.ID.PKEY", "YYYY", "SS"))], by="PKEY", all.x=T)
+dat1 <- dat1[sort(colnames(dat1))]
+
+kable(dat1[sample(nrow(dat1), 10),c("BecZone", "SpeciesGroup", "Age", "Height", "AgeClass_calc", "HeightClass_calc", "DisturbanceYear", "speciesCOUNT", "sumABUND")])
 ```
 
